--- a/src/app/form/form.component.html
+++ b/src/app/form/form.component.html
@@ -18,5 +18,6 @@
     <h2>Mô Tả</h2>
     <textarea [(ngModel)]="descriptionInput" type="text" placeholder="Enter Description" style='width: 278px; height: 125px; margin-bottom: 20px;'></textarea><br>
     
-    <button (click)="submit()" style="padding: 0 128px">Thêm Hàng</button>
+    <button (click)="submit()" style="padding: 0 128px">Thêm Hàng</button><br>
+
 </div>
