--- a/src/app/pages/detail-page/detail-page.component.html
+++ b/src/app/pages/detail-page/detail-page.component.html
@@ -1,3 +1,4 @@
+<!-- 
 <h1>DETAIL PAGE</h1>
 <h1>{{item.name}}</h1>
 <h1>{{item.image}}</h1>
@@ -5,3 +6,5 @@
 <h1>{{item.price}}</h1>
 <h1>{{item.boxSize}}</h1>
 <h1>{{item.inStock}}</h1>
+ -->
+<!-- <button (click)="this.dataService.updateItem()"> EDIT DETAILS</button> -->
