--- a/src/app/item-card/item-card.component.scss
+++ b/src/app/item-card/item-card.component.scss
@@ -22,8 +22,12 @@ button{
     color: white;
     background-color: #005baa;
     height: 60px;
-    width: 90%;
+    width: 100%;
     margin: 5px 0;
     border-radius: 10px;
     font-weight: 200;
   }
+
+// nav{
+    
+// }
