--- a/src/app/menu-header/menu-header.component.scss
+++ b/src/app/menu-header/menu-header.component.scss
@@ -11,7 +11,7 @@
 
     box-sizing: border-box;
     padding:25px 16px;
-
-    border-bottom: 2px solid #F6F1F1;
+    
+    border-bottom: 2px solid rgb(222, 222, 222);
     
 }
