cat blog and hosting

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,9 @@
 <router-outlet></router-outlet>
 <nav>
   <a routerLink="/menuPage" routerLinkActive="active"> menu page </a>
+  <a routerLink="/cat-blog"> Cat Blog </a>
 </nav>
+<!-- 
+<div class=""box-list>
+  <app-cat-page *ngFor="let fact of listFacts" [fact] = "fact"></app-cat-page>
+</div> -->
